--- a/partials/header.html
+++ b/partials/header.html
@@ -2,11 +2,11 @@
     <nav>
         <ul class="menu">
             <li><a href="../index.html"><img src="../media/logoB.png" alt="logo"></a></li>
-            <li><a href="">Formación y cursos</a></li>
+            <li><a href="../clases.html">Formación y cursos</a></li>
             <li><a href="../terapia.html">Equitación Terapeútica</a></li>
-            <li><a href="">Actividades</a></li>
-            <li><a href="">Alojamiento</a></li>
-            <li><a href="">Eventos</a></li>
+            <li><a href="../actividades.html">Actividades</a></li>
+            <li><a href="../alojamiento.html">Alojamiento</a></li>
+            <li><a href="../eventos.html">Eventos</a></li>
             <li><a href="">Caballos PRE</a></li>
             <li><a href="">Tienda</a></li>
         </ul>
