--- a/css/eventos.css
+++ b/css/eventos.css
@@ -83,27 +83,57 @@
 }
 
 
-.doblado{
-    height: 50vh;
+.doblado {
+    min-height: 50vh; 
+    padding: 5vh 2vw; 
     background-color: #F3E8D8;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap; 
+    gap: 5vw; 
 }
 
-.doblado .texto{
+.doblado .texto {
     display: flex;
     flex-direction: column;
     width: 35vw;
-    margin-right: 5vw;
+    min-width: 300px;
 }
 
-.doblado .texto > *{
+.doblado .texto > * {
     margin: 2vh 0;
 }
 
-.doblado .texto h2{
+.doblado .texto h2 {
     font-size: 2.5em;
+}
+
+.doblado .foto {
+    display: grid;
+    grid-template-areas: "unica";
+}
+
+
+.doblado .foto img, 
+.doblado .foto div {
+    grid-area: unica;
+    height: 35vh;
+    width: 25vw;
+    min-width: 250px; 
+    min-height: 350px; 
+    border-radius: 10px;
+}
+
+.doblado .foto img {
+    object-fit: cover;
+    z-index: 2;
+}
+
+.doblado .foto div {
+    background-color: darkgray;
+    transform: rotate(-8deg);
+    z-index: 1; 
 }
 
 em{
@@ -111,113 +141,218 @@ em{
     color: #5D3A1A;
 }
 
-.doblado .foto{
-    display: grid;
-    grid-template-areas: "unica";
-}
-
-.doblado .foto img{
-    grid-area: unica;
-    height: 35vh;
-    object-fit: cover;
-    width: 25vw;
-    z-index: 2;
-    border-radius: 10px;
-}
-
-.doblado .foto div{
-    height: 35vh;
-    width: 25vw;
-    grid-area: unica;
-    background-color: darkgray;
-    transform: rotate(-8deg);
-    border-radius: 10px;
-}
-
-.repor{
+.repor {
     display: grid;
     grid-template-columns: 14vw 14vw 37vw;
-    grid-template-rows: 10vh 9vh repeat(8,6vh);
-    height: 75vh;
+    grid-template-rows: auto auto repeat(8, minmax(6vh, auto)); 
+    min-height: 75vh;
     margin: 5vh auto;
     justify-content: center;
+    gap: 1vh;
 }
 
-.repor .ini{
+.repor .ini {
     display: flex;
     flex-direction: column;
     grid-column: 1/4;
     grid-row: 1/3;
     justify-content: center;
     text-align: center;
+    padding-bottom: 2vh;
 }
 
-.repor .peque{
+.repor .peque {
     grid-column: 3/4;
     grid-row: 3/5;
     color: #5D3A1A;
     background-color: #F3E8D8;
     border-radius: 20px;
-    padding: 1em;
+    padding: 1.5em; 
     border: #5D3A1A solid 1px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.repor .grande{
+.repor .grande {
     margin-top: 1vh;
     grid-column: 3/4;
     grid-row: 5/11;
-    padding: 1em;
+    padding: 1.5em;
     border: #5D3A1A solid 1px;
     background-color: #fdf9f2;
     border-radius: 20px;
 }
 
-.repor .grande p{
-    margin: 2vh 0px;
+.repor .grande p {
+    margin: 3vh 0; 
+    line-height: 1.5;
 }
 
-.repor .peque p{
-    margin: 0.5vh;
+.repor .peque p {
+    margin: 1vh 0;
 }
 
-.repor img{
+.repor img {
     object-fit: cover;
-    height: 18vh;
-    width: 12vw;
+    width: 90%; 
+    height: 100%;
     border-radius: 20px;
+    justify-self: center;
 }
-.repor img:nth-of-type(1){
+
+.repor img:nth-of-type(1) {
     grid-column: 1/2;
     grid-row: 3/6;
 }
 
-.repor img:nth-of-type(2){
+.repor img:nth-of-type(2) {
     grid-column: 2/3;
     grid-row: 4/7;
 }
 
-.repor img:nth-of-type(3){
+.repor img:nth-of-type(3) {
     grid-column: 1/2;
     grid-row: 7/10;
 }
 
-.repor img:nth-of-type(4){
+.repor img:nth-of-type(4) {
     grid-column: 2/3;
     grid-row: 8/11;
 }
 
-.repor .ini h5{
+.repor .ini h5 {
     font-weight: 100;
     color: #5D3A1A;
 }
 
-.repor .ini h2{
+.repor .ini h2 {
     margin: 1vh;
     font-size: 2em;
 }
 
-.repor .ini p{
-    width: 30vw;
-    margin: auto;
+.repor .ini p {
+    max-width: 700px;
+    margin: 0 auto;
 }
 
+
+@media (max-width: 1024px) {
+    .repor {
+        display: flex; 
+        flex-direction: column;
+        width: 95vw; 
+        height: auto; 
+        padding: 0;
+    }
+
+    .repor .ini {
+        width: 100%;
+        margin-bottom: 4vh;
+    }
+
+    .repor .ini p {
+        width: 90%; 
+    }
+
+
+    .repor .peque, 
+    .repor .grande {
+        grid-column: auto;
+        grid-row: auto;
+        width: 100%; 
+        box-sizing: border-box; 
+        margin: 2vh 0;
+    }
+
+    .repor .grande p {
+        margin: 2vh 0; 
+    }
+
+
+    .repor img {
+        width: 100%;
+        height: auto;
+        aspect-ratio: 4 / 3; 
+        margin-bottom: 2vh;
+    }
+}
+
+@media (max-width: 768px) {
+    .inicio, .inicio img, .inicio div {
+        height: 70vh;
+    }
+
+    .inicio article h1 {
+        font-size: 3.5rem;
+    }
+
+    .eventos {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .eventos article {
+        width: 80vw;
+        margin: 3vh 0;
+    }
+
+    .doblado {
+        flex-direction: column; 
+        text-align: center;
+        padding: 8vh 5vw;
+    }
+
+    .doblado .texto {
+        width: 90vw;
+        margin-right: 0;
+    }
+
+    .doblado .foto img, .doblado .foto div {
+        width: 70vw;
+        height: 40vh;
+    }
+}
+
+@media (max-width: 640px) {
+    .inicio article h1 {
+        font-size: 2.5rem;
+    }
+
+    .inicio article p {
+        font-size: 1.1rem;
+    }
+
+    
+    .repor {
+        grid-template-columns: 1fr;
+    }
+
+    .repor .ini, .repor .peque, .repor .grande, .repor img {
+        grid-column: 1 / 2;
+    }
+
+    .repor .ini p {
+        width: 90%;
+    }
+
+    .repor img {
+        width: 100%;
+        height: 300px;
+        margin: 1vh 0;
+    }
+    
+    .repor .grande p {
+        margin: 1.5vh 0; 
+    }
+
+    .repor .ini h2 {
+        font-size: 1.8em;
+    }
+    
+    .repor .peque, 
+    .repor .grande {
+        padding: 1.2em;
+        border-radius: 15px; 
+    }
+}
