subida de caballos -tienda

--- a/partials/header.html
+++ b/partials/header.html
@@ -7,7 +7,7 @@
             <li><a href="../actividades.html">Actividades</a></li>
             <li><a href="../alojamiento.html">Alojamiento</a></li>
             <li><a href="../eventos.html">Eventos</a></li>
-            <li><a href="">Caballos PRE</a></li>
+            <li><a href="../caballospre.html">Caballos PRE</a></li>
             <li><a href="">Tienda</a></li>
         </ul>
     </nav>
